# egx-news-bot

./: .gitignore  LICENSE  README.md  config.example.env  pyproject.toml
scripts/: install_cron.sh  run_feedback_loop.sh  run_pm2_loop.sh  run_telegram_once.sh  uninstall_cron.sh
src/egx_news_bot/: __init__.py  ai_analysis.py  analysis.py  cli.py  entities.py  feedback.py  ingestion.py  models.py  normalization.py  poller.py  relevance.py  sources.py  telegram.py
tests/: test_ai_analysis.py  test_cli.py  test_entity_registry.py  test_feedback.py  test_impact_analyzer.py  test_install_scripts.py  test_poller.py  test_rss_ingestion.py  test_sources.py  test_telegram.py  test_telegram_feedback.py
